# pdf-renamer

./: .gitignore  CHANGELOG.md  README.md  coverage.xml  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
pdf_renamer/: __init__.py  filename_generator.py  main.py  pdf_utils.py
src/pdf_file_renamer/infrastructure/doi/: pdf2doi_extractor.py
