[project]
name = "pdf-renamer"
version = "0.3.0"
description = "Intelligent PDF renaming using LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=1.0.17",
    "pymupdf>=1.26.5",
    "docling-parse>=2.0.0",
    "docling-core>=2.0.0",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
    "typer>=0.19.2",
    "tenacity>=9.0.0",
]

[project.scripts]
pdf-renamer = "pdf_renamer.main:cli"

[tool.uv]
package = true
